<resources>
    <string name="app_name">TreeLog</string>

    <string-array name="property_type">
        <item>City Property</item>
        <item>Private Property</item>
    </string-array>

    <string-array name="tree_type">
        <item>Deciduous Tree</item>
        <item>Evergreen Tree</item>
        <item>Flowering Tree</item>
        <item>Fruit Tree</item>
        <item>Christmas Tree</item>
        <item>Rainforest Tree</item>
    </string-array>

    <string-array name="biotic_source">
        <item>None</item>
        <item>Healthy</item>
        <item>Infected with insects</item>
        <item>Ash disease</item>
        <item>Damaged by animal</item>
        <item>Fungus disease</item>
    </string-array>

    <string-array name="abiotic_source">
        <item>None</item>
        <item>Healthy</item>
        <item>Soil nutrient deficiencies</item>
        <item>Air nutrient deficiencies</item>
        <item>Lightning</item>
        <item>Vehicles impacts</item>
        <item>Drought</item>
    </string-array>

    <string name="title_activity_maps">Map</string>

    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>


    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="enter_species_of_the_tree"><font size="15">enter species of the tree</font></string>
    <string name="species_of_the_tree">Species of the tree</string>
    <string name="type_of_the_tree">Type of the tree</string>
    <string name="latitude_will_be_here"><font size="15">latitude will be here</font></string>
    <string name="longitude_will_be_here"><font size="15">longitude will be here</font></string>
    <string name="address_will_be_here"><font size="15">address will be here</font></string>
    <string name="choose_property_type_from_list"><font size="15">choose property type from list</font></string>
    <string name="btnIntend">Capture Tree Pic</string>
    <string name="album_name">Tree Pics</string>
    <string name="cannot">Can not</string>
    <string name="title_activity_tree_history">TreeHistory</string>

    <string name="action_settings">Settings</string>
    <string name="description_of_the_tree">Description of the tree</string>
    <string name="pick_aboitic_damage_from_list">Pick aboitic damage from list</string>
    <string name="pick_biotic_damage_from_list">Pick biotic damage from list</string>
    <string name="proceed">Proceed</string>
    <string name="or">OR</string>
    <string name="enter_manually">Enter manually</string>
    <string name="stay_close_to_the_tree_and_press_locate">Stay close to the tree and press LOCATE</string>
    <string name="locate">Locate</string>
    <string name="check_the_obtained_information_below_before_proceeding">Check the obtained information below before proceeding:</string>
    <string name="street_address">Street Address:</string>
    <string name="property_type">Property Type:</string>
    <string name="next">Next</string>
    <string name="pick_property_type_from_list">Pick property type from list</string>
    <string name="tree_health_information">Tree health information</string>
    <string name="sources_of_tree_damage">Sources of tree damage:</string>
    <string name="biotic_source">Biotic source</string>
    <string name="choose_biotic_source_here">choose biotic source here</string>
    <string name="abiotic_source">Abiotic source</string>
    <string name="choose_abiotic_source_here">choose abiotic source here</string>
    <string name="mark_following_hazard_if_necessarily">Mark the following hazards if necessary</string>
    <string name="forked_trunks">Forked Trunks</string>
    <string name="signs_of_decay">Signs of Decay</string>
    <string name="dangerous_balance_more_than_10_degree">Dangerous balance (more than 10 degrees)</string>
    <string name="broken_or_forked_branches">Broken or forked branches</string>
    <string name="remove_tree">Remove tree?</string>
    <string name="upload_picture_before_saving">Upload picture before saving</string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="tree_name_generated">Tree name generated:</string>
    <string name="date_created">Date created:</string>
    <string name="pick_tree_icon_optional">Pick tree Icon (optional)</string>
    <string name="save_tree_to_database">Save tree to Database</string>
    <string name="choose_tree_type_from_list">choose tree type from list</string>
    <string name="when_the_tree_was_planted_apprx">When the tree was planted (apprx)</string>
    <string name="enter_date_when_planted">enter date when planted</string>
    <string name="diametr_of_the_tree">Diameter of the tree</string>
    <string name="enter_diametr">enter diameter</string>
    <string name="size_of_the_tree">Size of the tree</string>
    <string name="enter_size_of_the_tree">enter size of the tree</string>
    <string name="tree_pit_information">Tree pit information:</string>
    <string name="comments">Comments:</string>
    <string name="place_comments_on_tree_pit_condition_here">place comments on tree pit condition here</string>
    <string name="choose_tree_type_here">Choose tree type here</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="locate_me">Locate me!</string>
    <string name="species_will_be_here">Species will be here</string>
    <string name="addres_will_be_here">Address will be here</string>
    <string name="map">Map</string>
    <string name="pics">Pics</string>
    <string name="tree_name">Tree Name:</string>
    <string name="name_of_the_tree">Name of the tree</string>
    <string name="date_planted">Date planted:</string>
    <string name="by_volunteer">By volunteer:</string>
    <string name="date_modified">Date modified:</string>
    <string name="tree_type">Tree type:</string>
    <string name="tree_diametr">Tree diameter:</string>
    <string name="tree_size">Tree size:</string>
    <string name="remove">Remove:</string>
    <string name="biotic_damage">Biotic damage:</string>
    <string name="abiotic_damage">Abiotic damage:</string>
    <string name="hazard">Hazard:</string>
    <string name="pit_condition">Pit condition:</string>
    <string name="edit">Edit</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="identify_a_tree_by_leaf">Identify a tree by leaf:</string>
    <string name="upload_leaf_photo">Upload leaf photo</string>
    <string name="do_you_want_to_proceed_with_this_identified_data">Do you want to proceed with this identified data?</string>
    <string name="all_other_identified_data_will_be_displayed_on_the_next_forms">*all other identified data will be displayed on the next forms</string>
    <string name="treename">TreeName</string>
    <string name="update_history">Update History</string>
    <string name="supporting_photo">Do you want to upload a supporting photo?</string>
    <string name="yes">Yes</string>
    <string name="back_to_tree">Back to Tree</string>
    <string name="image_description">Image description</string>
    <string name="tree_name_etc">Tree Name...</string>
    <string name="confirm_delete_tree">Confirm DELETE tree?</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="tree_pit_picture">Tree Pit Picture</string>
    <string name="save_pics">Save pics</string>
    <string name="species">Species:</string>
    <string name="update">Update</string>
    <string name="tree_name_lower">tree name</string>
    <string name="loading">Loading</string>
    <string name="login_will_be_here">Login will be here</string>
    <string name="login_temporarily">Login (temporarily)</string>
    <string name="species_num">Species+Num</string>
    <string name="add_history">Add History</string>
    <string name="show_history">Show History</string>
    <string name="diameter">Diameter:</string>
    <string name="_10_ft">10 ft</string>
    <string name="_30_ft">30 ft</string>
    <string name="_100_ft">100 ft</string>
    <string name="_500_ft">500 ft</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="new_tree">New Tree</string>
    <string name="tree_list_in_area">List of Trees in Your Area</string>
    <string name="tree_list_filtered">Filtered Tree List</string>
    <string name="make_a_photo">Take a Photo</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="facebook_app_id">1882738315278178</string>
    <string name="fb_login_protocol_scheme">fb1882738315278178</string>
</resources>
