<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_welcome"
        android:title="@string/welcome_screen"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_new_tree"
        android:title="@string/new_tree" />
    <item
        android:id="@+id/menu_list_tree"
        android:title="@string/tree_list_in_area" />
    <item
        android:id="@+id/menu_list_tree_filtered"
        android:title="@string/tree_list_filtered" />
    <item
        android:id="@+id/menu_make_photo"
        android:title="@string/make_a_photo" />
    <item
        android:id="@+id/menu_map"
        android:title="@string/map" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout" />
    <item
        android:id="@+id/menu_exit"
        android:title="@string/exit" />
</menu>