<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.montclair.puma.treelog.EditTree">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tree_name" />
    <EditText
        android:id="@+id/update_tree_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street_address" />
    <EditText
        android:id="@+id/update_tree_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_label" />
    <EditText
        android:id="@+id/update_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude_label" />
    <EditText
        android:id="@+id/update_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species" />
    <EditText
        android:id="@+id/update_species"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tree_type" />
    <EditText
        android:id="@+id/update_tree_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/property_type" />
    <EditText
        android:id="@+id/update_property_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/btn_updateTree"
        android:background="@drawable/regular_button"
        android:text="@string/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
