<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.montclair.puma.treelog.TreeFinalPic"
    >
    <TextView
        android:text="@string/upload_picture_before_saving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/final_tree_pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/noimageicon23"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"

            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:id="@+id/btn_upload_final_pic"
                android:onClick="uploadFinalTreePic"
                android:background="@drawable/regular_button"
                />
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/delete"
                android:onClick="deleteFinalTreePic"
                android:background="@drawable/regular_button"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tree_name_generated"
            android:layout_weight="0.24"
            />

        <TextView
            android:id="@+id/tv_tree_uniqID"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:text="@string/species_num"
            android:layout_weight="0.77" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_created"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_dateCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_created"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/small_tree_pic"
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:src="@drawable/noimageicon23"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pick_tree_icon_optional"
            android:background="@drawable/regular_button"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_commit"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/regular_button"
        android:text="@string/save_tree_to_database"
        />
</LinearLayout>
