<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.puma.treelog.TreeHistory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginLeft="24dp"
            android:id="@+id/tv_tree_species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/species_will_be_here" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_location_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="0.1"
                android:src="@drawable/iclocationonblack24dp" />

            <TextView
                android:id="@+id/tv_tree_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/iv_location_icon"
                android:layout_weight="1"
                android:text="@string/addres_will_be_here" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_weight="3"
                android:background="@drawable/regular_button"
                android:text="@string/map" />

            <Button
                android:id="@+id/btn_pics"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_weight="3"
                android:background="@drawable/regular_button"
                android:text="@string/pics" />
        </LinearLayout>
        <ImageView
            android:id="@+id/iv_main_picture"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/tree"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tree_name"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_tree_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_tree"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_planted"
            />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_date_planted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_planted"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_type"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_property_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_type"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_created"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_date_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_created"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_volunteer"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_vol_creator_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_volunteer"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_modified"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_date_modyfied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_modified"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_volunteer"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_modified_volunteer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_volunteer"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#212121"/>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tree_type"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_tree_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tree_type"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tree_diametr"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_tree_diametr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tree_diametr"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tree_size"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_tree_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tree_size"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#212121"/>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:text="@string/remove"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_tree_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:text="@string/remove"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biotic_damage"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_biotic_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biotic_damage"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abiotic_damage"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_a_biotic_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abiotic_damage"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hazard"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_tree_hazard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hazard"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pit_condition"
                />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_tree_pit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pit_condition"
                />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_Edit_tree"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/regular_button"
                android:text="@string/edit"
                />
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_delete_tree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:background="@drawable/regular_button"
                android:text="@string/delete"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
