<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/confirm_delete_tree"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_deleteYes"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:background="@drawable/regular_button"
            android:text="@string/confirm"
            />

        <Button
            android:id="@+id/btn_deleteNo"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="@string/back"
            android:background="@drawable/regular_button"
            android:clickable="true"
            />
    </LinearLayout>
</LinearLayout>